Added view email functionality

--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -30,6 +30,11 @@
             <input type="submit" class="btn btn-primary"/>
         </form>
     </div>
+
+    <div id="email-view" style="display: none;">
+    <!-- Content of the clicked email will appear here -->
+    </div>
+
 {% endblock %}
 
 {% block script %}
